# or-tools

./: .bazelrc  .gitignore  CMakeLists.txt  WORKSPACE
.github/workflows/: cmake_windows_python.yml
artifacts/docker/: dev.dockerfile
artifacts/docker/installers/: apt_install_clean.sh  bazel.sh  clang_llvm.sh
bazel/: scip.BUILD  variables.bzl
cmake/: README.md  cpp.cmake  deps.cmake  dotnet.cmake  java.cmake  ortoolsConfig.cmake.in  python.cmake
cmake/dependencies/: CMakeLists.txt
makefiles/: Makefile.cpp.mk
ortools/algorithms/: BUILD  BUILD.bazel  dynamic_partition.cc  dynamic_partition.h  dynamic_permutation.cc  find_graph_symmetries.cc  find_graph_symmetries.h  hungarian.cc  knapsack_solver.cc  knapsack_solver.h  knapsack_solver_for_cuts.cc  knapsack_solver_for_cuts.h  sparse_permutation.cc  sparse_permutation.h
ortools/base/: BUILD  BUILD.bazel  cleanup.h  file.cc  file.h  glog_bypass_wasm_platform_support_issue.diff  glog_fix_android_pthread_issue.diff  int_type.h  log_severity.h  logging.cc  logging.h  logging_export.h  source_location.h  stl_util.h  strong_int.h  strong_vector.h  sysinfo.h  threadpool.cc  threadpool.h  timer.h  version.cc  version.h  vlog_is_on.h
ortools/bop/: bop_fs.cc  bop_portfolio.h  bop_solver.cc  integral_solver.cc
ortools/constraint_solver/: BUILD  constraint_solver.cc  constraint_solver.h  constraint_solveri.h  constraints.cc  default_search.cc  demon_profiler.cc  element.cc  expr_array.cc  expressions.cc  graph_constraints.cc  interval.cc  local_search.cc  routing.h
ortools/constraint_solver/samples/: code_samples.bzl  tsp.py
ortools/glop/: BUILD.bazel  basis_representation.cc  basis_representation.h  dual_edge_norms.cc  entering_variable.cc  entering_variable.h  initial_basis.cc  lp_solver.cc  lp_solver.h  lu_factorization.cc  lu_factorization.h  markowitz.cc  markowitz.h  preprocessor.cc  preprocessor.h  pricing.h  primal_edge_norms.cc  reduced_costs.cc  reduced_costs.h  revised_simplex.cc  revised_simplex.h  status.h  variable_values.cc
ortools/graph/: BUILD.bazel  assignment.cc  graph.h  linear_assignment.cc  linear_assignment.h  perfect_matching.h
ortools/gscip/: BUILD.bazel  legacy_scip_params.cc  legacy_scip_params.h  lpi_glop.cpp
ortools/gurobi/: BUILD.bazel  environment.cc  environment.h
ortools/linear_solver/: BUILD  BUILD.bazel  CMakeLists.txt  glop_interface.cc  gurobi_interface.cc  highs_interface.cc  linear_expr.cc  linear_expr.h  linear_solver.cc  linear_solver.h  linear_solver.proto  linear_solver_callback.h  linear_solver_test.cc  model_validator.cc  model_validator.h  pdlp_interface.cc  scip_callback.cc  scip_callback.h  scip_helper_macros.h  scip_interface.cc
ortools/linear_solver/samples/: StiglerDiet.csproj  code_samples.bzl  stigler_diet.cc
ortools/lp_data/: BUILD.bazel  lp_data.cc  lp_data.h  matrix_scaler.cc  mps_reader.cc  permutation.h  sparse.cc  sparse.h  sparse_vector.h
ortools/pdlp/: BUILD.bazel  primal_dual_hybrid_gradient.cc  termination.cc  trust_region.h
ortools/port/: BUILD.bazel  file.cc  file.h  proto_utils.h  utf8.h
ortools/routing/: BUILD.bazel  carp_parser.cc  carp_parser.h  carp_parser_test.cc  cvrptw_lib.cc  cvrptw_lib.h  nearp_parser.cc  nearp_parser.h  nearp_parser_test.cc  pdtsp_parser.cc  pdtsp_parser.h  pdtsp_parser_test.cc  simple_graph.cc  simple_graph.h  simple_graph_test.cc  solomon_parser.cc  solomon_parser.h  solomon_parser_test.cc  solution_serializer.cc  solution_serializer.h  solution_serializer_test.cc  tsplib_parser.cc  tsplib_parser.h  tsplib_parser_test.cc  tsptw_parser.cc  tsptw_parser.h  tsptw_parser_test.cc
ortools/routing/samples/: BUILD.bazel  cvrp_disjoint_tw.cc  cvrp_disjoint_tw_test.sh  cvrptw.cc  cvrptw_soft_capacity.cc  cvrptw_test.sh  cvrptw_with_breaks.cc  cvrptw_with_precedences.cc  cvrptw_with_refueling.cc  cvrptw_with_refueling_test.sh  cvrptw_with_resources.cc  cvrptw_with_resources_test.sh  cvrptw_with_stop_times_and_resources.cc  cvrptw_with_stop_times_and_resources_test.sh  cvrptw_with_time_dependent_costs.cc  cvrptw_with_time_dependent_costs.sh
ortools/routing/testdata/: BUILD.bazel
ortools/sat/: BUILD  clause.cc  cp_model_lns.cc  cp_model_symmetries.cc  implied_bounds.h  integer.h  linear_programming_constraint.h  sat_base.h
ortools/sat/samples/: code_samples.bzl
ortools/simplify/: BUILD  vision_map_ilp.cc  vision_map_ilp.h  vision_map_ilp_test.cc
ortools/util/: BUILD.bazel  bitset.cc  bitset.h  file_util.h  filelineiter.h  fp_utils.cc  fp_utils.h  lazy_mutable_copy.h  logging.cc  logging.h  monoid_operation_tree.h  piecewise_linear_function.cc  rev.h  running_stat.h  saturated_arithmetic.h  stats.cc  stats.h  strong_integers.h  time_limit.cc  time_limit.h  tuple_set.h
scripts/container/: create_container.sh  create_image.sh  docker_adduser.sh  docker_bashrc.sh  exec_container.sh  run.sh
