load("@rules_cc//cc:defs.bzl", "cc_proto_library")
package(default_visibility = ["//visibility:public"])

cc_library(
    name = "legacy_scip_params",
    srcs = ["legacy_scip_params.cc"],
    hdrs = ["legacy_scip_params.h"],
    deps = [
        ":scip_with_glop",
        "//ortools/base:base",
        "//ortools/linear_solver:scip_helper_macros",
    ],
)

cc_library(
    name = "scip_with_glop",
    srcs = ["lpi_glop.cpp"],
    deps = [
        "//ortools/glop:lp_solver",
        "@scip//:libscip",
    ],
)
