load("@rules_cc//cc:defs.bzl", "cc_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "linear_solver_proto",
    srcs = ["linear_solver.proto"],
    deps = ["//ortools/util:optional_boolean_proto"],
)

cc_proto_library(
    name = "linear_solver_cc_proto",
    deps = [":linear_solver_proto"],
)

# You can include the interfaces to different solvers by invoking '--define'
# flags. By default GLOP, BOP, SCIP, GUROBI, and CP-SAT interface are included.
#
# For instance, if you want to use the GLPK solver, build with
# '--define USE_GLPK=' (or add it to your bazel.rc file). This will download,
# build and link to GLPK.
cc_library(
    name = "linear_solver",
    srcs = [
        "glop_interface.cc",
        "glop_utils.cc",
        "gurobi_interface.cc",
        "linear_expr.cc",
        "linear_solver_callback.cc",
        "linear_solver.cc",
        "scip_callback.cc",
        "scip_interface.cc",
    ],
    hdrs = [
        "glop_interface.cc",
        "glop_utils.h",
        "linear_expr.h",
        "linear_solver.h",
        "linear_solver_callback.h",
        "scip_callback.h",
        "scip_helper_macros.h",
    ],
    copts = [
        "-DUSE_PDLP",
        "-DUSE_SCIP",
    ],
    deps = [
        ":linear_solver_cc_proto",
        "//ortools/gscip:scip_with_glop",
        "//ortools/base:accurate_sum",
        "//ortools/base:dynamic_library",
        "//ortools/base:hash",
        "//ortools/base:map_util",
        "//ortools/base:stl_util",
        "//ortools/base:timer",
        "//ortools/base:cleanup",
        "//ortools/base",
        "//ortools/glop:lp_solver",
        "//ortools/glop:parameters_cc_proto",
        "//ortools/gscip:legacy_scip_params",
        "//ortools/gurobi:environment",
        "//ortools/util:fp_utils",
        "//ortools/util:lazy_mutable_copy",
    ],
)

cc_binary(
    name = "linear_solver_test",
    srcs = ["linear_solver_test.cc"],
    deps = [
        ":linear_solver",
    ],
)

cc_library(
    name = "scip_helper_macros",
    hdrs = ["scip_helper_macros.h"],
    deps = [
    ],
)
