load("@rules_cc//cc:defs.bzl", "cc_proto_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "lazy_mutable_copy",
    hdrs = ["lazy_mutable_copy.h"],
    deps = ["@com_google_absl//absl/memory"],
)

cc_library(
    name = "random_engine",
    hdrs = ["random_engine.h"],
    deps = [],
)

cc_library(
    name = "bitset",
    srcs = ["bitset.cc"],
    hdrs = ["bitset.h"],
    deps = ["//ortools/base"],
)

cc_library(
    name = "stats",
    srcs = ["stats.cc"],
    hdrs = ["stats.h"],
    deps = [
        "//ortools/base",
        "//ortools/base:stl_util",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        #"//ortools/port:sysinfo",
        "//ortools/base:timer",
        #"//ortools/port:utf8",
    ],
)

cc_library(
    name = "time_limit",
    srcs = ["time_limit.cc"],
    hdrs = ["time_limit.h"],
    deps = [
        ":running_stat",
        "//ortools/base",
        "//ortools/base:sysinfo",
        "//ortools/base:timer",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "fp_utils",
    srcs = ["fp_utils.cc"],
    hdrs = ["fp_utils.h"],
    # -frounding-math is needed for code that uses IEEE-754 rounding modes.
    # You must also set this flag if you depend on this target and use
    # its methods related to IEEE-754 rounding modes.
    copts = ["-frounding-math"],
    deps = [
        ":bitset",
        "//ortools/base",
    ],
)

cc_library(
    name = "return_macros",
    hdrs = ["return_macros.h"],
    deps = ["//ortools/base"],
)

cc_library(
    name = "running_stat",
    hdrs = ["running_stat.h"],
    deps = ["//ortools/base"],
)

proto_library(
    name = "optional_boolean_proto",
    srcs = ["optional_boolean.proto"],
)

cc_proto_library(
    name = "optional_boolean_cc_proto",
    deps = [":optional_boolean_proto"],
)

cc_library(
    name = "rev",
    hdrs = ["rev.h"],
    deps = [
        "//ortools/base",
        "//ortools/base:map_util",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "vector_or_function",
    hdrs = ["vector_or_function.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//ortools/base",
    ],
)

cc_library(
    name = "filelineiter",
    hdrs = ["filelineiter.h"],
    deps = [
        "//ortools/base",
        "//ortools/base:file",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "sort",
    hdrs = ["sort.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//ortools/base",
    ],
)

cc_library(
    name = "logging",
    srcs = ["logging.cc"],
    hdrs = ["logging.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//ortools/base",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "strong_integers",
    hdrs = ["strong_integers.h"],
    deps = [
        "//ortools/base",
        "@com_google_absl//absl/strings",
    ],
)
