exports_files([
    "carp_gdb19.dat",  # https://github.com/vidalt/HGS-CARP/blob/master/Instances/CARP/gdb19.dat
    # https://www.sciencedirect.com/science/article/abs/pii/0305054883900266
    "carp_gdb19_diferente_deposito.dat",
    "carp_gdb19_incorrecto_vertices.dat",
    "carp_gdb19_incorrecto_arireq.dat",
    "carp_gdb19_incorrecto_arinoreq.dat",
    "carp_gdb19_incorrecto_vehiculos.dat",
    "carp_gdb19_incorrecto_capacidad.dat",
    "carp_gdb19_incorrecto_tipo.dat",
    "carp_gdb19_incorrecto_coste.dat",
    "carp_gdb19_incorrecto_deposito.dat",
    "carp_gdb19_no_arista_req.dat",
    "carp_gdb19_mixed_arcs.dat",
    "carp_gdb19_incorrecta_lista_aristas_req.dat",
    "carp_toy.dat",
    "nearp_BHW1.dat",
    "nearp_toy.dat",
    "pdtsp_prob10b.txt",
    "pdtsp_prob10b.txt.gz",
    "solomon_bp_c101.mps",
    "solomon_bp_c101.pb",
    "solomon_google2.delivery_at_depot_location.pb.txt",
    "solomon_google2.delivery_only.pb.txt",
    "solomon_google2.depot_location.pb.txt",
    "solomon_google2.pb.txt",
    "solomon_google2.pickup_at_depot.pb.txt",
    "solomon.zip",
    "solomon_check_id.txt",
    "tsplib_ar9152.tour",
    "tsplib_ar9152.tsp",
    "tsplib_Kytojoki_33.vrp",
])
